--- a/DétailsVéhicules.html
+++ b/DétailsVéhicules.html
@@ -105,8 +105,9 @@
         <h1 class="fw-bold mb-4 fs-1">BMW 535i, Navi, Leather, ABS</h1>
         <img src="/ImgGlobal/vehicule2.jpg" alt="Véhicule Vente" style="max-width: 100%;height:auto">
       </div>
-      <div class="col-10 offset-1 my-5 bg-dark px-1 col-sm-7">
-        <div class="bg-white fw-bold text-center py-4  border-top border-5 border-secondary" style="margin-top:-0.28em;">DESCRIPTION</div>
+      <div class="col-10 offset-sm-1 my-5 bg-dark px-1 col-sm-7">
+        <div class="bg-white fw-bold text-center py-4  border-top border-5 border-secondary"
+          style="margin-top:-0.28em;">DESCRIPTION</div>
         <div class="text-white fw-bold text-center my-4">TECHNIQUE</div>
         <div class="text-white fw-bold text-center my-5">OPTIONS</div>
         <div class="text-white fw-bold text-center my-4">CONTACT</div>
@@ -117,7 +118,17 @@
           magnam voluptatum labore tempora. Exercitationem laborum amet facilis dolor et, aperiam cupiditate quis est
           sit
           labore.</p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam dolor quibusdam optio harum magnam, non quia distinctio modi dolorum maiores natus iste labore. Possimus rerum est nulla? Eum reprehenderit numquam similique reiciendis. Eum consequuntur sunt officia quis reiciendis nam eaque fuga unde amet dolorum ipsum nulla atque ratione ex placeat rem modi ad, vel autem in iusto. Optio veniam impedit repellat laborum saepe nulla assumenda! Consectetur tempora deleniti odit vitae dolore vel provident eos corporis? Sapiente expedita saepe ipsum laboriosam exercitationem suscipit nemo doloremque provident commodi laborum beatae libero consequatur possimus fugit quidem nesciunt vitae, iusto quo eveniet. Consequatur optio eius quaerat dolorem ipsam natus cumque, harum reiciendis adipisci animi eligendi omnis nulla doloremque repudiandae repellendus totam itaque suscipit, et quibusdam iusto porro eveniet quae voluptatibus? Fugiat recusandae totam esse assumenda. Reiciendis distinctio delectus repellat est corporis commodi omnis pariatur sit quia. Esse atque nesciunt cumque doloremque odio. Sit, alias.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam dolor quibusdam optio harum magnam, non quia
+          distinctio modi dolorum maiores natus iste labore. Possimus rerum est nulla? Eum reprehenderit numquam
+          similique reiciendis. Eum consequuntur sunt officia quis reiciendis nam eaque fuga unde amet dolorum ipsum
+          nulla atque ratione ex placeat rem modi ad, vel autem in iusto. Optio veniam impedit repellat laborum saepe
+          nulla assumenda! Consectetur tempora deleniti odit vitae dolore vel provident eos corporis? Sapiente expedita
+          saepe ipsum laboriosam exercitationem suscipit nemo doloremque provident commodi laborum beatae libero
+          consequatur possimus fugit quidem nesciunt vitae, iusto quo eveniet. Consequatur optio eius quaerat dolorem
+          ipsam natus cumque, harum reiciendis adipisci animi eligendi omnis nulla doloremque repudiandae repellendus
+          totam itaque suscipit, et quibusdam iusto porro eveniet quae voluptatibus? Fugiat recusandae totam esse
+          assumenda. Reiciendis distinctio delectus repellat est corporis commodi omnis pariatur sit quia. Esse atque
+          nesciunt cumque doloremque odio. Sit, alias.</p>
         <div class="my-4 border-start border-secondary border-3">
           <p class="fst-italic text-muted mx-4">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Explicabo quod
             nesciunt, deleniti ex temporibus
