--- a/Index.html
+++ b/Index.html
@@ -75,8 +75,8 @@
             <div class="d-flex justify-content-end col-10 offset-1" id="navbarSupportedContent">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link text-white bg-secondary fw-bold py-3 px-4 d-block"
-                            href="/index.html" title="Vers la page d'acceuil du site Club Auto"><span>ACCUEIL</span></a>
+                        <a class="nav-link text-white bg-secondary fw-bold py-3 px-4 d-block" href="/index.html"
+                            title="Vers la page d'acceuil du site Club Auto"><span>ACCUEIL</span></a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link text-black fw-bold py-3 px-4" href="/vente.html"
@@ -129,15 +129,15 @@
                 </div>
                 <div class="row col-10 offset-1 pt-5">
                     <span class="col-lg-6">
-                        <h1 class="col-10 offset-1 gy-5 fw-bold pb-4 h2">LE MEILLEUR DE L'AUTOMOBILE</h1>
-                        <hr class="col-10 offset-1 gy-3 pb-4">
-                        <p class="col-10 offset-1 gy-3 text-muted">Lorem ipsum dolor sit amet
+                        <h1 class="col-10 offset-1 offset-sm-0 gy-5 fw-bold pb-4 h2">LE MEILLEUR DE L'AUTOMOBILE</h1>
+                        <hr class="col-10 offset-1 offset-sm-0 gy-3 pb-4">
+                        <p class="col-10 offset-1 offset-sm-0 gy-3 text-muted">Lorem ipsum dolor sit amet
                             consectetur adipisicing elit. Suscipit voluptates dicta repellat! Eaque alias commodi quas
                             sed repudiandae delectus voluptates. Laudantium quisquam impedit nemo atque adipisci
                             doloribus temporibus cum cupiditate. Numquam aspernatur, vero quaerat tempora dolorem
                             tenetur, nisi nobis laboriosam iure nostrum, ullam sint mollitia. Similique incidunt magni
                             cum atque?</p>
-                        <div class="col-10 offset-1 gy-3 pt-4">
+                        <div class="col-10 offset-1 offset-sm-0 gy-3 pt-4">
                             <p><i class="fa-solid fa-check" style="color: #CC6119"></i> Lorem ipsum dolor sit amet.</p>
                             <p><i class="fa-solid fa-check" style="color: #CC6119"></i> Lorem ipsum dolor sit amet.</p>
                             <p><i class="fa-solid fa-check" style="color: #CC6119"></i> Lorem ipsum dolor sit amet.</p>
@@ -156,7 +156,7 @@
         <!--Ici commence l'article location-->
         <section class="pt-4">
             <div id="Pub" class="row pt-5 py-sm-6 mx-0">
-                <div class="col-12 col-sm-5 offset-sm-1 bg-warning bg-opacity-75 pt-5 my-5 me-sm-4 mb-sm-0">
+                <div class="col-12 col-sm-5 offset-sm-1 bg-warning bg-opacity-50 pt-5 my-5 me-sm-4 mb-sm-0">
                     <h1 class="fw-bold fs-2 col-5 col-sm-8 offset-3 offset-sm-1">Vous souhaitez louer?</h1>
                     <p class="text-white col-5 col-sm-8 offset-3 offset-sm-1 fs-5 pb-5 pt-2">Lorem ipsum dolor sit amet
                         consectetur
@@ -167,7 +167,7 @@
                         repudiandae quod officiis incidunt cupiditate in architecto quaerat saepe, rerum quidem
                     </p>
                 </div>
-                <div class="col-12 col-sm-5 bg-danger bg-opacity-75 pt-5 my-sm-5 mb-5 ms-sm-4 mb-sm-0">
+                <div class="col-12 col-sm-5 bg-danger bg-opacity-50 pt-5 my-sm-5 mb-5 ms-sm-4 mb-sm-0">
                     <h1 class="fw-bold fs-2 col-5 col-sm-8 offset-3 offset-sm-1">Vous souhaitez acheter?</h1>
                     <p class="text-white col-5 col-sm-8 offset-3 offset-sm-1 fs-5 pb-5 pt-2">Lorem ipsum dolor sit amet
                         consectetur
@@ -294,7 +294,7 @@
                         class="text-white text-decoration-none fw-bold fs-5">CONTACTEZ-NOUS</a></button>
             </div>
             <span id="vehicule3" class="py-6 px-0">
-                <div class="bg-warning bg-opacity-75 my-4 py-4 col-12 col-sm-10 col-lg-4 offset-sm-1 px-sm-5">
+                <div class="bg-warning bg-opacity-50 my-4 py-4 col-12 col-sm-10 col-lg-4 offset-sm-1 px-sm-5">
                     <h1 class="offset-2 offset-sm-1 fs-2 fw-bold col-6 col-sm-10 mt-5">CLUB AUTO<br>
                         <span class="text-white">VENTE ET LOCATION</span>
                     </h1>
@@ -311,8 +311,8 @@
     <!--Ici commence le #mainfooter-->
     <section class="row m-0" id="mainFooter">
         <footer class="bg-dark text-light">
-            <div class="div col-12 pb-0 row">
-                <div class="col-sm-6 col-lg px-4 pt-5">
+            <div class="div col-12 pb-0 row mx-sm-4">
+                <div class="col-sm-6 col-lg-3 px-4 pt-5">
                     <h1 class="fs-4 fw-bold"><span class="text-primary fw-bold">CLUB</span> AUTO</h1>
                     <p class="fs-6 text-white-50 pt-2">Lorem ipsum dolor sit amet consectetur, adipisicing elit.
                         Labore
@@ -320,12 +320,12 @@
                         voluptatibus
                         praesentium adipisci similique ea sit.</p>
                 </div>
-                <div class="col-sm-6 col-lg py-1 px-4 pt-5" ->
+                <div class="col-sm-6 col-lg-3 py-1 px-4 pt-5" ->
                     <h1 class="fs-4 fw-bold pb-2">HORAIRE D'OUVERTURE</h1>
                     <span class="ca-text-footer text-white-50 fw-bold">Lundi - Samedi :</span> 09:00 - 17H00 <br>
                     <span class="ca-text-footer text-white-50 fw-bold"> Dimanche et jours fériés :</span> Fermé
                 </div>
-                <div class="col-sm-6 col-lg px-4">
+                <div class="col-sm-6 col-lg-3 px-4">
                     <h1 class="fs-4 fw-bold pb-2 pt-5">NEWSLETTER</h1>
                     <div class="input-group mb-3">
                         <input type="text" class="form-control rounded-0" placeholder="Entrez votre Email"
@@ -338,7 +338,7 @@
                         dernières
                         offres</label>
                 </div>
-                <div class="col-sm-6 col-lg pt-5 px-4">
+                <div class="col-sm-6 col-lg-3 pt-5 px-4">
                     <h1 class="fs-4 fw-bold">RESEAUX SOCIAUX</h1>
                     <div class="pb-3 pt-3">
                         <img class="mx-1 ca-logo-size" src="logos/logoFacebook.jpg" alt="logo facebook">
